--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -2,12 +2,27 @@
 
 .sort {
   position: relative;
+
+  &.active {
+
+    .sort {
+
+      &__label {
+        svg {
+          transform: rotate(0);
+        }
+      }
+    }
+  }
+
   &__label {
     display: flex;
     align-items: center;
 
     svg {
       margin-right: 8px;
+      transition: all ease .3s;
+      transform: rotate(-180deg);
     }
 
     b {
